# bindersnap

./: .gitattributes  .gitignore  Makefile  README.md  agents.md  docker-compose.yml  go.mod  go.sum  package-lock.json  package.json  pyproject.toml  stylelint.config.js
.gitea/ISSUE_TEMPLATE/: change-request.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yml  ui.bug-report.yaml
assets/: go-licenses.json
cmd/: main.go
contrib/systemd/: gitea.service
custom/conf/: app.example.ini  app.ini
custom/templates/: about.tmpl  home.tmpl
models/fixtures/: user.yml
models/issues/: content_history.go
models/migrations/: migrations.go
models/repo/: update.go  upload.go
models/user/: error.go  unreconciled_subscription.go  user.go
modules/git/: config.go
modules/pandoc/: command.go  pandoc.go  pandoc_test.go
modules/repository/: create.go  create_test.go
modules/setting/: pandoc.go  pay.go  repository.go  setting.go  ui.go
modules/structs/: subscription.go
modules/templates/: helper.go  util_misc.go  util_string.go
options/locale/: locale_en-US.ini
routers/private/: hook_pre_receive.go
routers/web/: home.go  web.go
services/forms/: admin.go  repo_form.go
services/gitdiff/: gitdiff.go  gitdiff_test.go
services/lfs/: server.go
services/pull/: merge.go  merge_merge.go  pull_test.go  review.go  update.go
services/repository/: adopt.go  create.go  fork.go  merge_upstream.go  repository_test.go  template.go  transfer.go
tests/: example.bsdoc  sqlite.ini.tmpl
tools/: open_pr.py
(+146 files in other folders)
